--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             <meta name = "description" content="My Wedsite">
             <meta name = "developer" content="Hoang Xuan">
             <meta name = "school" content="HUST">
+            <meta name="viewport" content="width=device-width, initial-scale = 1">
             <title>My Wedsite</title>
             <link rel="stylesheet" href="css/tainguyen.css">
         </head>
