--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
     <!DOCTYPE html>
     <html lang="en">
         <head>
-            <meta name = "description" content="My Wedsite">
+            <meta name = "description" content="Hoang Wedsite">
             <meta name = "developer" content="Hoang Xuan">
             <meta name = "school" content="HUST">
             <meta name="viewport" content="width=device-width, initial-scale = 1">
