--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <meta name = "developer" content="Hoang Xuan">
             <meta name = "school" content="HUST">
             <meta name="viewport" content="width=device-width, initial-scale = 1">
-            <title>My Wedsite</title>
+            <title>Hoang Wedsite</title>
             <link rel="stylesheet" href="css/tainguyen.css">
         </head>
         <body>
