--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="flex_container">
             <div id ="left_side">   
                     <h2 id="Me">About Me</h2>
-                    <img src="asset/ảnh.jpg" alt ="error" width="100" height="150">
+                    <img src="asset/meme.jpeg" alt ="error" width="200" height="150">
                     <p>I am studing in HUST.</p>
                     <ul>
                         <li><strong>Full name:</strong> Trần Xuân Hoàng</li>
